
   ? 	mime.c, uri.c: Fix message/rfc822 hack.

   ?	Add a minimum size limit for conditional extraction of a MIME
   	part. Requested by AlexB.

   ?	Linux RPM options:

   	CFLAGS='-O2 -g -pipe -Wall -Wp,-D_FORTIFY_SOURCE=2 -fexceptions -fstack-protector
   	--param=ssp-buffer-size=4 -mtune=generic'  ./configure --without-db --without-openssl


--1.75.55

   *	Upgraded SQLite to 3.26.0.

--1.75.54--

   +	Add --enable-32bit flag for SunOS.

--1.75.53--

  **	Configure and build fixes for SunOS.  Reported by warwick.ac.uk.

--1.75.52--

   *	Upgraded SQLite to 3.23.1.

   !	Updated TLD list.

  **	Fix guard bug in socket3_write_fd() where zero bytes resulted
	in an error return instead of simply zero count.  Reported by
	Chris C.

   *	Fix smdb logging bug where a milter with verbose=database wasn't
	logging the lookups.


--1.75.51--

   *	Upgraded SQLite to 3.15.2.

   +	Added inplace tool.

   +	Added od-like bitdump tool.

   +	Added inetd myip service tool and check_myip.sh dynamic DNS script.

   +	Fix some makefile build issues.

--1.75.50--

   +	Add support to smtp2 API to pass in the HELO argument, fix the
	logging, and add -e and -H options to smtp2 CLI for envelope
	testing and HELO argument.

   !	Fix socket3_client() handling of ETIMEOUT reporting.

   +	Add addpasswd.sh for Nginx password files.

   !	Fix flip tool handling of temporary file name to avoid name
	collisions if multiple instances run at the same time.  Also
	replace custom error reporting code in favour of err.h.

   +	Simple inetd service (myip) reports IPv4 or IPv6 address and
	port number. If the server port is 80 or any port between
	8000..8999, then treat it as an HTTP request.

--1.75.49--

   *	Upgraded SQLite to 3.9.2

   !	Updated TLD list.

   +	Add functions to read/write UTF8 file streams.

   +	Add string search functions based on Horspool, Sunday, and Smith.

   +	Add .onion to RFC2606 reserved list.

   +	Add basic err.h for Windows native.
